updated to support new api
