# internal/models/create_vm_request_disk.go
@@ -1,0 +1,110 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// CreateVMRequestDisk create VM request disk
+//
+// swagger:model CreateVMRequest.Disk
+type CreateVMRequestDisk struct {
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// size gib
+	SizeGib int32 `json:"sizeGib,omitempty"`
+
+	// storage class
+	StorageClass *StorageClass `json:"storageClass,omitempty"`
+}
+
+// Validate validates this create VM request disk
+func (m *CreateVMRequestDisk) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateStorageClass(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *CreateVMRequestDisk) validateStorageClass(formats strfmt.Registry) error {
+	if swag.IsZero(m.StorageClass) { // not required
+		return nil
+	}
+
+	if m.StorageClass != nil {
+		if err := m.StorageClass.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("storageClass")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("storageClass")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this create VM request disk based on the context it is used
+func (m *CreateVMRequestDisk) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateStorageClass(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *CreateVMRequestDisk) contextValidateStorageClass(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.StorageClass != nil {
+		if err := m.StorageClass.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("storageClass")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("storageClass")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CreateVMRequestDisk) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CreateVMRequestDisk) UnmarshalBinary(b []byte) error {
+	var res CreateVMRequestDisk
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
