# internal/models/create_vm_response.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// CreateVMResponse create VM response
+//
+// swagger:model CreateVMResponse
+type CreateVMResponse struct {
+
+	// id
+	ID string `json:"id,omitempty"`
+}
+
+// Validate validates this create VM response
+func (m *CreateVMResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this create VM response based on context it is used
+func (m *CreateVMResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CreateVMResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CreateVMResponse) UnmarshalBinary(b []byte) error {
+	var res CreateVMResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
